--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.organization=ulboralabs
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
 sonar.sources=.
-sonar.exclusions=**/*_test.go, main.go ,**/vendor/**
+sonar.exclusions=**/*_test.go, main.go ,**/vendor/**, nbproject/**
 sonar.test.inclusions=**/*_test.go
 sonar.host.url=https://sonarcloud.io
 sonar.go.coverage.reportPaths=cache/coverage.out, common/coverage.out, cluster/coverage.out, errors/coverage.out, performance/coverage.out
