--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.sources=.
 sonar.exclusions=**/*_test.go, main.go ,**/vendor/**, nbproject/**
 sonar.test.inclusions=**/*_test.go
 sonar.host.url=https://sonarcloud.io
-sonar.go.coverage.reportPaths=cache/coverage.out, common/coverage.out, cluster/coverage.out, errors/coverage.out, performance/coverage.out
+sonar.go.coverage.reportPaths=cache/coverage.out, common/coverage.out, cluster/coverage.out, errors/coverage.out, performance/coverage.out, managers/coverage.out
 #, circuitbreaker/coverage.out, database/coverage.out, database/mysqldb/coverage.out, environment/coverage.out, gwerrors/coverage.out, handlers/coverage.out, managers/coverage.out, monitor/coverage.out
 
 
